--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <script src='https://widget.cloudinary.com/v2.0/global/all.js' type='text/javascript'></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- stylesheets  -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
     <link rel="stylesheet" type="text/css" href="/stylesheet.css">    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
